<?xml version="1.0"?>
<package format="2">
  <name>erp42_description</name>
  <version>0.0.0</version>
  <description>The erp42_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="djjin@todo.todo">djjin</maintainer>


  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>xacro</build_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
