<?xml version="1.0"?>
<package format="2">
  <name>erp42_gazebo</name>
  <version>0.0.0</version>
  <description>The erp42_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="djjin@todo.todo">djjin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ackermann_msgs</build_depend>
  <build_depend>ackermann_vehicle_description</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>


<!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
