<?xml version="1.0"?>
<package>
  <name>erp42_vehicle</name>
  <version>0.1.0</version>
  <description>
    erp42_vehicle is a group of packages for simulating a vehicle with
    Ackermann steering.
  </description>

  <maintainer email="djjin@todo.todo">djjin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>erp42_vehicle_description</run_depend>
  <run_depend>erp42_vehicle_gazebo</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
