<?xml version="1.0"?>
<package>
  <name>erp42_vehicle_gazebo</name>
  <version>0.1.0</version>
  <description>
    erp42_vehicle_gazebo is used with Gazebo to simulate a vehicle with
    Ackermann steering.
  </description>
  <!--
    Copyright (c) 2013 Wunderkammer Laboratory

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
  -->
  <maintainer email="djjin@todo.todo">djjin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>ackermann_msgs</run_depend>
  <run_depend>erp42_vehicle_description</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
    <architecture_independent/>
    <rosdoc config="rosdoc.yaml"/>
    <!-- gazebo_ros_paths_plugin automatically adds these to
         GAZEBO_PLUGIN_PATH and GAZEBO_MODEL_PATH when you do this export inside
        the package.xml file. You can than use URIs of type model://my_package/stuff. -->
    <gazebo_ros gazebo_model_path="${prefix}/.." /> 
</export>
</package>
