<?xml version="1.0"?>
<package format="2">
    <name>erp42_vehicle_rviz</name>
    <version>0.0.0</version>
    <description>The erp42_vehicle_rviz package</description>
    <maintainer email="djjin@todo.todo">djjin</maintainer>
    <license>Unmanned Solution</license>
    <author email="jdj2261@github.com">Daejong Jin</author><url type="website">https://github.com/srmainwaring/steer_bot</url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roslaunch</build_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>joint_state_publisher_gui</exec_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>roslaunch</exec_depend>
    <exec_depend>rviz</exec_depend>
</package>
